tests/baselines/reference/enumWithPrimitiveName.errors.txt
enumWithPrimitiveName.ts(1,6): error TS2431: Enum name cannot be 'string'.
enumWithPrimitiveName.ts(2,6): error TS2431: Enum name cannot be 'number'.
enumWithPrimitiveName.ts(3,6): error TS2431: Enum name cannot be 'any'.


==== enumWithPrimitiveName.ts (3 errors) ====
    enum string { }
         ~~~~~~
!!! error TS2431: Enum name cannot be 'string'.
    enum number { }
         ~~~~~~
!!! error TS2431: Enum name cannot be 'number'.
    enum any { }
         ~~~
!!! error TS2431: Enum name cannot be 'any'.